# stryx

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  mkdocs.yml  pyproject.toml  todo.txt
.github/workflows/: publish.yml
conf/recipes/: dc_exp.yaml  train_exp.yaml
config/: config.yaml
docs/: api.md  index.md  tutorial.md  workflow.md
docs/advanced/: distributed.md  recipes.md
docs/features/: cli.md  configuration.md  tracking.md
examples/: config.yaml  dataclass_config.py  sft.py  train.py
outputs/exp1/: checkpoint.pt
src/stryx/: __init__.py  cli.py  cli_parser.py  commands.py  commands_old.py  config.py  config_builder.py  context.py  decorator.py  lifecycle.py  recipes.py  run_id.py  schema.py  tui.py  utils.py
tests/: __init__.py  conftest.py  test_cli.py
tests/e2e/: app.py  test_e2e_workflows.py
tests/integration/: __init__.py  test_cli_decorator.py  test_examples.py
tests/unit/: test_cmd_diff.py  test_cmd_fork.py  test_cmd_list.py  test_cmd_new.py  test_cmd_run.py  test_cmd_schema.py  test_cmd_show.py  test_config_builder.py  test_dataclass.py  test_lifecycle.py  test_run_id.py
