[project]
name = "stryx"
version = "0.1.0"
description = "Typed configuration compiler for ML experiments"
readme = "README.md"
authors = [
    { name = "Filippos Christianos", email = "filippos.christianos@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "filelock>=3.0",
    "petname>=2.6",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.0.0",
]

[project.scripts]
stryx = "stryx.cli:main"

[project.optional-dependencies]
examples = [
    "trl>=0.26.1",
]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
